[package]
name = "data_process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
lazy_static = "1.4.0"
rand_core = { version = "0.6.4", features = ["std"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.34.0", features = ["full"] }
